# linux-agents

./: .gitignore  E2E-TEST-REPORT.md  FIXES-APPLIED.md  LOW-PRIORITY-ISSUES.md  QUICKSTART.md  README.md  REQUIREMENTS.md  TESTING-VALIDATION.md  linux-agents-listen.service  openclaw-listen.service
.claude/: STRUCTURE.md
.claude/agents/: job-system-prompt.md
.claude/commands/: install-engineer-workstation.md  install-rpi-sandbox.md  prime.md  rpi-gui-term-user-prompt.md
.claude/skills/: README.md  secretctl
.claude/skills/cron-cli/: SKILL.md
.claude/skills/rpi-client/: SKILL.md
.claude/skills/rpi-gui/: SKILL.md
.codex/: README.md  STRUCTURE.md  config.toml
.codex/agents/: job-system-prompt.md  listen-job-system-prompt.md
.codex/commands/: install-engineer-workstation.md  install-rpi-sandbox.md  prime.md  rpi-gui-term-user-prompt.md
.codex/skills/: README.md
.codex/skills/cron-cli/: SKILL.md
.codex/skills/rpi-client/: SKILL.md
.codex/skills/rpi-gui/: SKILL.md
.codex/skills/rpi-job/: SKILL.md
.codex/skills/rpi-term/: SKILL.md
.codex/skills/secretctl/: SKILL.md
.opencode/: README.md  STRUCTURE.md  opencode.json
.opencode/agents/: job-system-prompt.md
.opencode/commands/: install-engineer-workstation.md  install-rpi-sandbox.md  prime.md  rpi-gui-term-user-prompt.md
.opencode/skills/: README.md  rpi-client  rpi-gui  rpi-job  rpi-term
.pi/agents/: job-system-prompt.md
.pi/skills/: rpi-client  rpi-gui  rpi-job  rpi-term
.pi/skills/cron-cli/: SKILL.md
apps/cron-cli/: README.md  pyproject.toml
apps/cron-cli/cron_cli/: main.py  storage.py
apps/cron-cli/tests/: test_cli.py  test_storage.py
apps/direct/: README.md  pyproject.toml
apps/listen/: AGENTS.md  DEBUG.md  README.md  main.py  pyproject.toml  worker.py
apps/listen/jobs/: 11214a08.yaml  3c496547.yaml  55d53295.yaml  6a8ca66c.yaml  73b883ee.yaml  7e2c6b25.yaml  ae02f156.yaml  e7a3cc36.yaml
apps/openclaw-listen/: README.md  worker.py
apps/openclaw-listen/jobs/: 1c78ab22.yaml  41e361be.yaml  48a10fd4.yaml  be1d9475.yaml
apps/rpi-client/: README.md
apps/rpi-client/rpi_client/: client.py
apps/rpi-gui/: README.md  pyproject.toml
apps/rpi-gui/artifacts/: ocr-20260316-102327.json
apps/rpi-gui/rpi_gui/commands/: airdrop.py  click.py  scroll.py  send.py  type.py
apps/rpi-gui/rpi_gui/modules/: screenshot.py
apps/rpi-gui/src/rpi_gui/: cli.py
apps/rpi-gui/src/rpi_gui/commands/: window.py
apps/rpi-gui/src/rpi_gui/modules/: ocr.py
apps/rpi-gui/tests/: test_accessibility.py  test_modules.py
apps/rpi-job/: README.md  pyproject.toml
apps/rpi-job/rpi_job/: main.py  worker.py
apps/rpi-job/rpi_job/jobs/archived/: 5c8020cc.yaml  85e53b65.yaml
apps/rpi-job/tests/: test_e2e_client_integration.py
apps/rpi-term/: README.md  pyproject.toml
apps/rpi-term/rpi_term/: cli.py
apps/rpi-term/rpi_term/commands/: logs.py
apps/rpi-term/rpi_term/modules/: output.py  proc.py
apps/rpi-term/tests/: test_sentinel.py
artifacts/e2e/20260316-1107/: execution-log.md  final-report.md
artifacts/e2e/20260316-1126/: README.md  execution-log.md  final-report.md  spec-init-test.md
artifacts/e2e/20260316-1138/: README.md  execution-log.md  final-report.md
direct/: README.md  client.py  main.py  pyproject.toml
listen/: AGENT-BUG-CONFIRMED.md  AGENT-BUG.md  AGENT-PASSED-CORRECTLY.md  AGENTS.md  BUG-CONFIRMED.md  BUG-RESOLVED.md  CLEANUP.md  CODE-NOT-LOADED.md  DEBUG-IMPROVED.md  DEBUG-LOG-ADDED.md  DEBUG-WORKING.md  DEBUG.md  DIAGNOSIS.md  DIAGNOSTIC.md  DIFFERENT-FILE.md  FILTER-COMPLETE.md  FILTER-FIXED.md  FILTER-FIXES-APPLIED.md  FILTER-IMPROVEMENT.md  FILTER-PARTIAL.md  FILTER-SUMMARY.md  FILTER-TEST.md  FINAL-ANALYSIS.md  FINAL-CONFIRMATION.md  FIX-APPLIED-AGENT.md  FIX-APPLIED-SUMMARY.md  FIX-APPLIED.md  FIX-COMPLETE.md  FIX-CORRECT-FILE.md  FIX-FINAL.md  FIX-PROGRESS.md  FIX-RUNNER-MISSING.md  FIX-STATUS.md  FIX-TEST.md  GITIGNORE-JOBS.md  JOB-C41038E2-FIX.md  JOB-FIX.md  JOB-UPDATE-ISSUE.md  MAIN-PY-BUG.md  README.md  (+26 more)
openclaw-listen/: README.md  _9b30c85f_subagent.py  acp_runner.mjs  main.py  pyproject.toml  worker.py
rpi-client/: README.md  pyproject.toml
rpi-client/rpi_client/: __init__.py  client.py  main.py
rpi-client/tests/: test_cli.py  test_client.py
rpi-gui/_backup_rpi_gui_egginfo/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
rpi-gui/_backup_rpi_gui_root/: cli.py
rpi-gui/_backup_rpi_gui_root2/: cli.py
rpi-gui/rpi_gui/: cli.py
rpi-gui/tests/: test_cli_commands.py  test_cli_core.py  test_e2e_workflow.py  test_input_module.py  test_sprint3_commands.py
rpi-job/: README.md
rpi-job/rpi_job/: __init__.py
rpi-job/tests/: test_api.py
rpi-term/tests/: test_cli.py  test_e2e_integration.py
specs/: README.md  TEMPLATE.md  gui-workflow.md  job-server-workflow.md  openclaw-listen-acp-spike.md  openclaw-listen-architecture.md  terminal-and-browser-quickstart.md  terminal-and-browser.md  terminal-integration.md
templates/systemd/: linux-agents-listen.service.template  openclaw-listen.service.template  rpi-job.service.template
(+75 files in other folders)
