[project]
name = "rpi-client"
version = "0.1.0"
description = "CLI client for rpi-job"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "click>=8.1",
  "httpx>=0.26",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
rpi-client = "rpi_client.main:cli"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["rpi_client*"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
