[project]
name = "direct"
version = "0.1.0"
description = "CLI client for the linux-agents listen server"
requires-python = ">=3.11"
dependencies = [
  "click>=8.1",
  "httpx",
  "pyyaml",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "client"]

[project.scripts]
direct = "main:cli"
